--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,7 @@ notebook = [
     "treon >= 0.1.4",
     # QISKIT CORE
     "qiskit[visualization] >= 1.0.0",
+    "qiskit-aer >= 0.14.2",
 ]
 
 [project.urls]
